--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   url_launcher: ^6.2.5
+  image_picker: ^1.1.2
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
