Firebase 4.x + Data Connect, хостинг Telegram-входа (папка hosting), правки виджета и deep link

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,7 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+# Уменьшено с 8G: на части машин вызывало "Could not reserve enough space"
+org.gradle.jvmargs=-Xmx2G -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=256m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
+
+# VK ID SDK — подставьте client_id и client_secret из кабинета https://id.vk.com/
+VKID_CLIENT_ID=0
+VKID_CLIENT_SECRET=
