--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,21 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   url_launcher: ^6.2.5
   image_picker: ^1.1.2
   permission_handler: ^12.0.1
+
+  # Firebase
+  firebase_core: ^4.4.0
+  firebase_auth: ^6.1.4
+  cloud_firestore: ^6.1.2
+  firebase_data_connect: ^0.2.2+2
+
+  # Вход: телефон (Firebase), VK ID, Telegram (виджет)
+  vkid_flutter_sdk: 1.0.3
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
